--- a/style.css
+++ b/style.css
@@ -31,3 +31,7 @@ h1{
     font-weight: 400;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
+img{
+    width: 100%;
+    margin: 100px auto;
+}
